--- a/core-node/templates/index.html
+++ b/core-node/templates/index.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <title>{% block title %} NetiFiDash Home {% endblock %}</title>
+          <title>{% block title %} netsumap Home {% endblock %}</title>
           <div class="jumbotron text-center">
             <h1>netsumap</h1> 
             <h2>
