--- a/core-node/templates/web_app.html
+++ b/core-node/templates/web_app.html
@@ -53,7 +53,7 @@
             </div>
           </div>
         </div>
-        <div class="tab-pane fade show active" id="inference" role="tabpanel" aria-labelledby="inference-tab">
+        <div class="tab-pane fade" id="inference" role="tabpanel" aria-labelledby="inference-tab">
           <div class="container">
             <div class="row">
               <div class="col-4"></div>
