--- a/core-node/templates/web_app.html
+++ b/core-node/templates/web_app.html
@@ -10,13 +10,13 @@
 
       <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
-          <button class="nav-link" id="ws-tab" data-bs-toggle="tab" data-bs-target="#ws" type="button" role="tab" aria-controls="ws" aria-selected="false">Websocket Configuration</button>
+          <button class="nav-link active" id="ws-tab" data-bs-toggle="tab" data-bs-target="#ws" type="button" role="tab" aria-controls="ws" aria-selected="false">Websocket Configuration</button>
         </li>
         <li class="nav-item" role="presentation">
           <button class="nav-link" id="inference-tab" data-bs-toggle="tab" data-bs-target="#inference" type="button" role="tab" aria-controls="inference" aria-selected="false">Network Metadata Analysis</button>
         </li>
         <li class="nav-item" role="presentation">
-          <button class="nav-link active" id="event-tab" data-bs-toggle="tab" data-bs-target="#event" type="button" role="tab" aria-controls="event" aria-selected="true">Network Events</button>
+          <button class="nav-link" id="event-tab" data-bs-toggle="tab" data-bs-target="#event" type="button" role="tab" aria-controls="event" aria-selected="true">Network Events</button>
         </li>
         <li class="nav-item" role="presentation">
           <button class="nav-link" id="alarm-tab" data-bs-toggle="tab" data-bs-target="#alarm" type="button" role="tab" aria-controls="alarm" aria-selected="false">Network Alarms</button>
