--- a/core-node/templates/web_app.html
+++ b/core-node/templates/web_app.html
@@ -9,10 +9,7 @@
     <div class="col-12">
 
       <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
-        <li class="nav-item" role="presentation">
-          <button class="nav-link active" id="ws-tab" data-bs-toggle="tab" data-bs-target="#ws" type="button" role="tab" aria-controls="ws" aria-selected="false">Websocket Configuration</button>
-        </li>
-        <li class="nav-item" role="presentation">
+        <li class="nav-item active" role="presentation">
           <button class="nav-link" id="inference-tab" data-bs-toggle="tab" data-bs-target="#inference" type="button" role="tab" aria-controls="inference" aria-selected="false">Network Metadata Analysis</button>
         </li>
         <li class="nav-item" role="presentation">
@@ -30,30 +27,7 @@
 
       </ul>
       <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active" id="ws" role="tabpanel" aria-labelledby="ws-tab">
-          <div class="container">
-            <div class="row">
-              <div class="col-4"></div>
-              <div class="col-4">
-                <h2>Persistent WebSocket Connection</h2>
-                <form onsubmit="event.preventDefault(); connectWebSocket();">
-                    <div class="form-group">
-                        <label for="wsUrl">WebSocket Server URL:</label>
-                        <input type="text" class="form-control" id="wsUrl" placeholder="ws://example.com/socket" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Connect</button>
-                    <button type="button" class="btn btn-danger ml-2" onclick="closeWebSocket()">Disconnect</button>
-                </form>
-                <div class="mt-4">
-                    <h4>Status: <span id="status" class="font-weight-bold">Not connected</span></h4>
-                    <div id="messages" class="mt-3"></div>
-                </div>
-              </div>
-              <div class="col-4"></div>
-            </div>
-          </div>
-        </div>
-        <div class="tab-pane fade" id="inference" role="tabpanel" aria-labelledby="inference-tab">
+        <div class="tab-pane fade show active" id="inference" role="tabpanel" aria-labelledby="inference-tab">
           <div class="container">
             <div class="row">
               <div class="col-4"></div>
