--- a/core-node/templates/web_app.html
+++ b/core-node/templates/web_app.html
@@ -10,6 +10,9 @@
 
       <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
         <li class="nav-item active" role="presentation">
+          <button class="nav-link" id="probes-tab" data-bs-toggle="tab" data-bs-target="#probes" type="button" role="tab" aria-controls="probes" aria-selected="false">Active Probes</button>
+        </li>
+        <li class="nav-item active" role="presentation">
           <button class="nav-link" id="inference-tab" data-bs-toggle="tab" data-bs-target="#inference" type="button" role="tab" aria-controls="inference" aria-selected="false">Network Metadata Analysis</button>
         </li>
         <li class="nav-item" role="presentation">
@@ -27,6 +30,38 @@
 
       </ul>
       <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" id="probes" role="tabpanel" aria-labelledby="probes-tab">
+          <div class="container">
+            <div class="row">
+              <div class="col-4"></div>
+              <div class="col-4">
+      
+                <h2>Adopted Probes</h2>
+                <button id="loadDataButton" class="btn btn-primary">Load Data</button>
+        
+                <div class="mt-3">
+                    <h3>Data Table</h3>
+                    <table class="table table-striped" id="dataTable">
+                        <thead>
+                            <tr>
+                                <th>Hostname</th>
+                                <th>IP</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- Data will be inserted here by JavaScript -->
+                        </tbody>
+                    </table>
+                </div>
+        
+                <div class="mt-3">
+                    <h3>Data Chart</h3>
+                    <canvas id="dataChart" width="400" height="200"></canvas>
+                </div>
+            </div>
+          </div>
+        </div>
         <div class="tab-pane fade show active" id="inference" role="tabpanel" aria-labelledby="inference-tab">
           <div class="container">
             <div class="row">
