--- a/core-node/templates/web_app.html
+++ b/core-node/templates/web_app.html
@@ -12,7 +12,7 @@
         <li class="nav-item active" role="presentation">
           <button class="nav-link" id="probes-tab" data-bs-toggle="tab" data-bs-target="#probes" type="button" role="tab" aria-controls="probes" aria-selected="false">Active Probes</button>
         </li>
-        <li class="nav-item active" role="presentation">
+        <li class="nav-item" role="presentation">
           <button class="nav-link" id="inference-tab" data-bs-toggle="tab" data-bs-target="#inference" type="button" role="tab" aria-controls="inference" aria-selected="false">Network Metadata Analysis</button>
         </li>
         <li class="nav-item" role="presentation">
@@ -62,7 +62,7 @@
             </div>
           </div>
         </div>
-        <div class="tab-pane fade show active" id="inference" role="tabpanel" aria-labelledby="inference-tab">
+        <div class="tab-pane fade" id="inference" role="tabpanel" aria-labelledby="inference-tab">
           <div class="container">
             <div class="row">
               <div class="col-4"></div>
