--- a/core-node/templates/web_app.html
+++ b/core-node/templates/web_app.html
@@ -37,7 +37,7 @@
               <div class="col-4">
       
                 <h2>Adopted Probes</h2>
-                <button id="loadDataButton" class="btn btn-primary">Load Data</button>
+                <button id="loadDataButton" onclick="return getProbes()" class="btn btn-primary">Load Data</button>
         
                 <div class="mt-3">
                     <h3>Data Table</h3>
