--- a/dashboard/templates/web_app.html
+++ b/dashboard/templates/web_app.html
@@ -9,7 +9,7 @@
     <div class="col-12">
 
       <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
-        <li class="nav-item" role="presentation">
+        <li class="nav-item active" role="presentation">
           <button class="nav-link" id="probes-tab" data-bs-toggle="tab" data-bs-target="#probes" type="button" role="tab" aria-controls="probes" aria-selected="false">Active Probes</button>
         </li>
         <li class="nav-item" role="presentation">
@@ -30,12 +30,12 @@
 
       </ul>
       <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade" id="probes" role="tabpanel" aria-labelledby="probes-tab">
+        <div class="tab-pane fade show active" id="probes" role="tabpanel" aria-labelledby="probes-tab">
           <div class="container">
             <div class="row">
               <div class="col-4"></div>
               <div class="col-4">
-      
+
                 <h2>Adopted Probes</h2>
                 <button id="loadDataButton" onclick="return getProbes()" class="btn btn-primary">Load Data</button>
         
@@ -59,6 +59,10 @@
                     <h3>Data Chart</h3>
                     <canvas id="dataChart" width="400" height="200"></canvas>
                 </div>
+
+              </div>
+      
+                
             </div>
           </div>
         </div>
