--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -194,14 +194,14 @@
   <body id="myPage">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{{ url_for('index') }}">netsumap dashboard</a>
+        <a class="navbar-brand" href="{{ url_for('app_main') }}">netsumap dashboard</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Dashboard</a>
+              <a class="nav-link active" aria-current="page" href="{{ url_for('app_main') }}">Dashboard</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://www.baughcl.com/">About Baugh Consulting & Lab L.L.C.</a>
