--- a/core-node/quartapp/templates/index.html
+++ b/core-node/quartapp/templates/index.html
@@ -9,7 +9,7 @@
     <h1 class="h3 mb-0 text-gray-800">{{ test_func() }}</h1>
 
     <button class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-        class="fas fa-download fa-sm text-white-50" onclick="return test()"></i>Generate Report</button>
+        class="fas fa-download fa-sm text-white-50" onclick="test()"></i>Generate Report</button>
 </div>
 
 <!-- Content Row -->
