--- a/core-node/quartapp/templates/index.html
+++ b/core-node/quartapp/templates/index.html
@@ -8,8 +8,11 @@
     <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
     <h1 class="h3 mb-0 text-gray-800">{{ test_func() }}</h1>
 
-    <button class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-        class="fas fa-download fa-sm text-white-50" onclick="test()"></i>Generate Report</button>
+    <button class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" onclick="test()"><i
+        class="fas fa-download fa-sm text-white-50"></i>JS Test</button>
+
+    <button id="pybutton" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+            class="fas fa-download fa-sm text-white-50"></i>Py Test</button>
 </div>
 
 <!-- Content Row -->
