--- a/core-node/quartapp/templates/blank.html
+++ b/core-node/quartapp/templates/blank.html
@@ -4,5 +4,13 @@
 
 <!-- Page Heading -->
 <h1 class="h3 mb-4 text-gray-800">Blank Page</h1>
+<h3>Test</h3>
+<form>
+            <!-- Input field to capture user input -->
+    <input type="text" id="user_input" placeholder="Enter something">
+    <button id="pyinput" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+        class="fas fa-download fa-sm text-white-50"></i>Py Test</button>
+</form>
+
 
 {% endblock %}
